--- a/pastelka/scss/main.scss
+++ b/pastelka/scss/main.scss
@@ -6,11 +6,14 @@
 @import "mixins";
 @import "fonts";
 @import "global";
+@import "breadcrumbs";
+@import "pagination";
 @import "modal";
 @import "header";
 @import "bannersAndSlider";
 @import "specialOffers";
 @import "novelty";
 @import "news";
+@import "catalog";
 
 @import "footer";
