--- a/pastelka/scss/_placeholders.scss
+++ b/pastelka/scss/_placeholders.scss
@@ -18,11 +18,11 @@
 %btnFull{
   color: $white;
   background: $green2;
-
   display: inline-block;
   &:hover {
     color: darken($white, 10%);
     background: darken($green2, 5%);
+    @include transition-duration(1s);
   }
 }
 
